--- a/redknot-website/css/style.css
+++ b/redknot-website/css/style.css
@@ -343,7 +343,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile ul li.dropdown:hover ul,
-.navbar-mobile ul li.dropdown .dropdown-active {
+.navbar-mobile ul li.dropdown.dropdown-active ul {
   display: block !important;
   animation: slideDown 0.3s ease;
 }
